Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4543

Crash due to shutdown race in HttpSM::tunnel_handler_post

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0, 7.0.0
    • Core

    Description

      We were seeing cores in production with HttpSM::tunnel_handler_post near the top of stack. If ua_session has already been cleared out, we cannot fetch the producer and things go downhill.

      We can fetch the producer by type (HT_HTTP_CLIENT) instead to fix the problem.

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: