TS-4543: Fix core in HttpSM::tunnel_handler_post. This closes #718.

(cherry picked from commit e5db6be875d4f4d5d291ac249ae2a9f7fed562a6)